Fixed merge error in code

--- a/pymaceuticals_working.ipynb
+++ b/pymaceuticals_working.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 496,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +126,7 @@
        "4    Male          21          25  "
       ]
      },
-     "execution_count": 496,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 497,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +166,7 @@
        "249"
       ]
      },
-     "execution_count": 497,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 498,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +189,7 @@
        "array(['g989'], dtype=object)"
       ]
      },
-     "execution_count": 498,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 499,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -420,7 +420,7 @@
        "1592  Female          21          26  "
       ]
      },
-     "execution_count": 499,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 500,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -545,7 +545,7 @@
        "4    Male          21          25  "
       ]
      },
-     "execution_count": 500,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -559,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 501,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -568,7 +568,7 @@
        "248"
       ]
      },
-     "execution_count": 501,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -589,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 502,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -741,7 +741,7 @@
        "Zoniferol                   6.966589                0.516398  "
       ]
      },
-     "execution_count": 502,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -775,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 503,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -914,7 +914,7 @@
        "Zoniferol     53.236507  51.818479  48.533355  6.966589  0.516398"
       ]
      },
-     "execution_count": 503,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -939,7 +939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 504,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -948,7 +948,7 @@
        "Text(0, 0.5, 'Number of Mice')"
       ]
      },
-     "execution_count": 504,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -982,7 +982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 505,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1024,7 +1024,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 506,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1048,7 +1048,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 507,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1088,7 +1088,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 508,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1116,21 +1116,22 @@
     "# Merge this group df with the original DataFrame to get the tumor volume at the last timepoint\n",
     "\n",
     "capomulin_last_timeplot_new = pd.DataFrame (capomulin_last_timeplot)\n",
-    "capomulin_last_timeplot_merged = pd.merge(capomulin_last_timeplot_new, clean_mice_df, on=(\"Mouse ID\",\"Timepoint\"),how=\"left\")\n",
+    "capomulin_last_timeplot_merged = pd.merge(capomulin_last_timeplot_new, mice_results_capomulin, on=(\"Mouse ID\",\"Timepoint\"),how=\"left\")\n",
     "\n",
     "ramicane_last_timeplot_new = pd.DataFrame (ramicane_last_timeplot)\n",
-    "ramicane_last_timeplot_merged = pd.merge(ramicane_last_timeplot_new, clean_mice_df, on=(\"Mouse ID\",\"Timepoint\"),how=\"left\")\n",
+    "ramicane_last_timeplot_merged = pd.merge(ramicane_last_timeplot_new, mice_results_ramicane, on=(\"Mouse ID\",\"Timepoint\"),how=\"left\")\n",
     "\n",
     "infubinol_last_timeplot_new = pd.DataFrame (infubinol_last_timeplot)\n",
-    "infubinol_last_timeplot_merged = pd.merge(infubinol_last_timeplot_new, clean_mice_df, on=(\"Mouse ID\",\"Timepoint\"),how=\"left\")\n",
+    "infubinol_last_timeplot_merged = pd.merge(infubinol_last_timeplot_new, mice_results_infubinol, on=(\"Mouse ID\",\"Timepoint\"),how=\"left\")\n",
     "\n",
     "ceftamin_last_timeplot_new = pd.DataFrame (ceftamin_last_timeplot)\n",
-    "ceftamin_last_timeplot_merged = pd.merge(ceftamin_last_timeplot_new, clean_mice_df, on=(\"Mouse ID\",\"Timepoint\"),how=\"left\")\n"
+    "ceftamin_last_timeplot_merged = pd.merge(ceftamin_last_timeplot_new, mice_results_ceftamin, on=(\"Mouse ID\",\"Timepoint\"),how=\"left\")\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 509,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1149,7 +1150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 510,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1179,7 +1180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 511,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1208,7 +1209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 512,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1237,7 +1238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 513,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1266,7 +1267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 514,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1293,7 +1294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 515,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1331,7 +1332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 516,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1340,7 +1341,7 @@
        "Text(0, 0.5, 'Tumor Volume (mm3)')"
       ]
      },
-     "execution_count": 516,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1371,7 +1372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 517,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1380,7 +1381,7 @@
        "Text(0, 0.5, 'Averag Tumor Volume (mm3)')"
       ]
      },
-     "execution_count": 517,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1417,7 +1418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 518,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1426,7 +1427,7 @@
        "Text(0, 0.5, 'Averag Tumor Volume (mm3)')"
       ]
      },
-     "execution_count": 518,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     },
